<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_baseline_explore_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_star_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom"/>
</menu>