<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/setting"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/reminder"
        app:layout_constraintEnd_toEndOf="@+id/toolbar4"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/off"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_translate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_language"
        app:layout_constraintEnd_toEndOf="@+id/switch_reminder"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/switch_reminder" />
</androidx.constraintlayout.widget.ConstraintLayout>