<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.AboutFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="60dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:layout_marginTop="?actionBarSize"
                app:layout_collapseMode="parallax">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                    app:layout_constraintStart_toEndOf="@+id/cardView2"
                    app:layout_constraintTop_toTopOf="@+id/cardView2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvFollowing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/textview"
                            android:textAlignment="center"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/imgViewUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgViewUser"
                    app:layout_constraintTop_toTopOf="@+id/imgViewUser">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/follower"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvFollower"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/textview"
                            android:textAlignment="center"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgViewUser"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/user1"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNameuser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/textview"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/cardView3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imgViewUser"
                    app:layout_constraintTop_toBottomOf="@+id/imgViewUser" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/textview"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="@+id/tvCompany"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                    app:layout_constraintEnd_toStartOf="@+id/cardView2"
                    app:layout_constraintTop_toTopOf="@+id/cardView2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/repository"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvRepository"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/textview"
                            android:textAlignment="center"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/textview"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="@+id/tvNameuser"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_location_city_24"
                    app:layout_constraintStart_toStartOf="@+id/tvNameuser"
                    app:layout_constraintTop_toBottomOf="@+id/tvNameuser" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocation"
                    app:tabGravity="fill"
                    app:tabMode="fixed"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true"
        android:fillViewport="true">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
